@@ -1,243 +1,520 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.nxtlife</groupId>
+
+
+
+	<groupId>com.nxtlife.mgs</groupId>
+
 	<artifactId>mgs</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>mgs</name>
-	<description>My Good School App</description>
+
+	<version>1.0.60-SNAPSHOT</version>
+
+	<!--<packaging>jar</packaging> -->
+
+
+
+	<name>My Good School App</name>
+
+	<description>My Good School Rest Apis</description>
+
+
 
 	<properties>
-		<java.version>1.8</java.version>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<java.version>1.8</java.version>
+
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+
+		<executable>true</executable>
+
 	</properties>
 
-	<profiles>
-		<profile>
-			<id>aws</id>
-			<dependencyManagement>
-				<dependencies>
-					<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-tomcat</artifactId>
-						<scope>provided</scope>
-					</dependency>
-				</dependencies>
-			</dependencyManagement>
-		</profile>
-		<profile>
-			<id>default</id>
-			<dependencyManagement>
-				<dependencies>
-					<dependency>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-tomcat</artifactId>
-					</dependency>
-				</dependencies>
-			</dependencyManagement>
-		</profile>
-	</profiles>
+
+
+	<dependencyManagement>
+
+		<dependencies>
+
+			<dependency>
+
+				<!-- Import dependency management from Spring Boot -->
+
+				<groupId>org.springframework.boot</groupId>
+
+				<artifactId>spring-boot-dependencies</artifactId>
+
+				<version>1.5.2.RELEASE</version>
+
+				<type>pom</type>
+
+				<scope>import</scope>
+
+			</dependency>
+
+		</dependencies>
+
+	</dependencyManagement>
+
+
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql.version}</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>  -->
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-quartz</artifactId>
-			<version>2.1.1.RELEASE</version>
-		</dependency>
 
 
 		<dependency>
+
 			<groupId>org.springframework.boot</groupId>
+
 			<artifactId>spring-boot-devtools</artifactId>
+
 		</dependency>
+
+
+
 		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.127</version>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-actuator</artifactId>
+
 		</dependency>
+
+
+
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.5</version>
-		</dependency>
-		<!-- <dependency>
-			<groupId>io.jsonwebtoken</groupId>
-			<artifactId>jjwt</artifactId>
-			<version>0.7.0</version>
-		</dependency> -->
-		<dependency>
+
 			<groupId>com.google.guava</groupId>
+
 			<artifactId>guava</artifactId>
+
 			<version>21.0</version>
+
 		</dependency>
+
+
+
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+
 		</dependency>
-		<!-- <dependency> <groupId>com.sun.mail</groupId> <artifactId>javax.mail</artifactId> 
-			</dependency> -->
-		<!-- <dependency>
-			<groupId>com.querydsl</groupId>
-			<artifactId>querydsl-apt</artifactId>
+
+
+
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-jersey</artifactId>
+
+		</dependency>
+
+
+
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-web</artifactId>
+
+		</dependency>
+
+
+
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+
 			<scope>provided</scope>
+
 		</dependency>
+
+
+
+		<!-- jdbc token store -->
+
 		<dependency>
-			<groupId>com.querydsl</groupId>
-			<artifactId>querydsl-jpa</artifactId>
-		</dependency> -->
-		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
+
+			<groupId>org.springframework</groupId>
+
+			<artifactId>spring-jdbc</artifactId>
+
 		</dependency>
+
+
+
+		<!-- Spring Security OAuth2 -->
+
 		<dependency>
-			<groupId>commons-io</groupId>
+
+			<groupId>org.springframework.security.oauth</groupId>
+
+			<artifactId>spring-security-oauth2</artifactId>
+
+		</dependency>
+
+
+
+		<dependency>
+
+			<groupId>mysql</groupId>
+
+			<artifactId>mysql-connector-java</artifactId>
+
+			<!-- <version>8.0.18</version> -->
+			<!-- $NO-MVN-MAN-VER$ -->
+
+		</dependency>
+
+
+
+		<dependency>
+
+			<groupId>com.amazonaws</groupId>
+
+			<artifactId>aws-java-sdk-s3</artifactId>
+
+			<version>1.11.127</version>
+
+		</dependency>
+
+
+
+		<dependency>
+
+			<groupId>org.apache.commons</groupId>
+
 			<artifactId>commons-io</artifactId>
-			<version>2.5</version>
+
+			<version>1.3.2</version>
+
 		</dependency>
+
+
+
 		<dependency>
-			<groupId>com.google.api-client</groupId>
-			<artifactId>google-api-client</artifactId>
-			<version>1.23.0</version>
+
+			<groupId>org.springframework.integration</groupId>
+
+			<artifactId>spring-integration-ftp</artifactId>
+
+			<scope>compile</scope>
+
+			<exclusions>
+
+				<exclusion>
+
+					<artifactId>jackson-module-kotlin</artifactId>
+
+					<groupId>com.fasterxml.jackson.module</groupId>
+
+				</exclusion>
+
+			</exclusions>
+
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.ftpserver/ftpserver-core -->
+
 		<dependency>
-			<groupId>com.google.apis</groupId>
-			<artifactId>google-api-services-plus</artifactId>
-			<version>v1-rev531-1.23.0</version>
+
+			<groupId>org.apache.ftpserver</groupId>
+
+			<artifactId>ftpserver-core</artifactId>
+
+			<version>1.1.1</version>
+
+			<scope>compile</scope>
+
 		</dependency>
+
+
+
+		<!-- pdf dependency -->
+
 		<dependency>
-			<groupId>com.restfb</groupId>
-			<artifactId>restfb</artifactId>
-			<version>1.41.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jxls</groupId>
-			<artifactId>jxls-reader</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jxls</groupId>
-			<artifactId>jxls</artifactId>
-			<version>2.2.6</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jxls</groupId>
-			<artifactId>jxls-poi</artifactId>
-			<version>1.0.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.zaxxer</groupId>
-			<artifactId>HikariCP</artifactId>
-			<version>2.2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp</artifactId>
-			<version>3.9.1</version>
-		</dependency>
-		<dependency>
+
 			<groupId>com.itextpdf</groupId>
+
 			<artifactId>itextpdf</artifactId>
-			<version>5.5.12</version>
-		</dependency>
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20140107</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mariuszgromada.math</groupId>
-			<artifactId>MathParser.org-mXparser</artifactId>
-			<version>4.1.1</version>
+
+			<version>5.5.10</version>
+
 		</dependency>
 
+
+
+		<!-- dependency for pdf encryption -->
+
 		<dependency>
+
+			<groupId>org.bouncycastle</groupId>
+
+			<artifactId>bcprov-jdk15on</artifactId>
+
+			<version>1.56</version>
+
+		</dependency>
+
+
+
+		<dependency>
+
 			<groupId>org.apache.poi</groupId>
+
 			<artifactId>poi</artifactId>
+
 			<version>4.1.0</version>
+
 		</dependency>
 
 		<dependency>
+
 			<groupId>org.apache.poi</groupId>
+
 			<artifactId>poi-ooxml</artifactId>
+
 			<version>4.1.0</version>
+
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-quartz -->
 		
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.0.16.RELEASE</version>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+
+
+
+		<!-- Websocket -->
+
+		<dependency>
+
+			<groupId>org.springframework.boot</groupId>
+
+			<artifactId>spring-boot-starter-websocket</artifactId>
+
 		</dependency>
+
+
+
+		<dependency>
+
+			<groupId>com.github.ulisesbocchio</groupId>
+
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+
+			<version>1.16</version>
+
+		</dependency>
+
 
 
 	</dependencies>
+
+
+
+
+
+
+
 	<build>
+
 		<plugins>
+
 			<plugin>
+
 				<groupId>org.springframework.boot</groupId>
+
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<!-- <plugin>
-				<groupId>com.mysema.maven</groupId>
-				<artifactId>apt-maven-plugin</artifactId>
-				<version>1.1.3</version>
+
+				<version>1.5.2.RELEASE</version>
+
+				<configuration>
+
+					<executable>true</executable>
+
+				</configuration>
+
 				<executions>
+
 					<execution>
+
 						<goals>
-							<goal>process</goal>
+
+							<goal>repackage</goal>
+
 						</goals>
-						<configuration>
-							<outputDirectory>target/generated-sources/java</outputDirectory>
-							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-						</configuration>
+
 					</execution>
+
 				</executions>
-			</plugin> -->
+
+			</plugin>
+
+			<plugin>
+
+				<groupId>org.apache.maven.plugins</groupId>
+
+				<artifactId>maven-compiler-plugin</artifactId>
+
+				<version>3.1</version>
+
+				<configuration>
+
+					<executable>true</executable>
+
+					<source>1.8</source>
+
+					<target>1.8</target>
+
+				</configuration>
+
+			</plugin>
+
+			<plugin>
+
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+
+				<artifactId>launch4j-maven-plugin</artifactId>
+
+				<version>1.7.16</version>
+
+				<executions>
+
+					<execution>
+
+						<id>l4j-clui</id>
+
+						<phase>package</phase>
+
+						<goals>
+
+							<goal>launch4j</goal>
+
+						</goals>
+
+						<configuration>
+
+							<headerType>console</headerType>
+
+							<outfile>target/MGSBackendRelease_1.4.exe</outfile>
+
+							<jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
+
+							<errTitle>Error in running mgs project</errTitle>
+
+							<stayAlive>true</stayAlive>
+
+							<restartOnCrash>true</restartOnCrash>
+
+							<classPath>
+
+								<mainClass>org.springframework.boot.loader.JarLauncher</mainClass>
+
+								<!--Not sure what the next 2 lines are for -->
+
+								<addDependencies>true</addDependencies>
+
+								<preCp>anything</preCp>
+
+							</classPath>
+
+							<jre>
+
+								<minVersion>1.8.0_161</minVersion>
+
+								<!--Not sure what these opts are for -->
+
+								<opts>
+
+									<opt>-Djava.endorsed.dirs=./endorsed</opt>
+
+								</opts>
+
+							</jre>
+
+							<versionInfo>
+
+								<fileVersion>0.0.2.1</fileVersion>
+
+								<txtFileVersion>0.0.2.1</txtFileVersion>
+
+								<fileDescription>${project.name}</fileDescription>
+
+								<copyright>Efkon India</copyright>
+
+								<productVersion>0.0.1.0</productVersion>
+
+								<txtProductVersion>${project.version}</txtProductVersion>
+
+								<productName>${project.name}</productName>
+
+								<originalFilename>MGSBackendRelease_1.3.exe</originalFilename>
+
+								<!-- internalName is mandatory -->
+
+								<internalName>nxtlife-mgs</internalName>
+
+							</versionInfo>
+
+							<messages>
+
+								<startupErr>Couldn't start the server</startupErr>
+
+								<bundledJreErr>JRE Bundled error</bundledJreErr>
+
+								<jreVersionErr>JRE version is different</jreVersionErr>
+
+								<launcherErr>Couldn't launch</launcherErr>
+
+								<!-- Used by console header only. -->
+
+								<instanceAlreadyExistsMsg>Instance already running</instanceAlreadyExistsMsg>
+
+							</messages>
+
+						</configuration>
+
+					</execution>
+
+				</executions>
+
+			</plugin>
+
 		</plugins>
+
 	</build>
+
+
+
+
+
+	<organization>
+
+		<name>Nxtlife Technologies Ltd.</name>
+
+		<url>www.nxtlifetechnologies.com</url>
+
+	</organization>
+
 </project>
-	
